Fixed the alignment of the add-pet section

--- a/client/css/add_pet.css
+++ b/client/css/add_pet.css
@@ -1,5 +1,5 @@
 #add-pet {
-	margin: 2em 1em 2em 1em;
+	margin: 3em auto 2em auto;
 	padding: 1em;
 	border-radius: 1em;
 	background-color: var(--light-color);
